syntax = "proto3";

import "Protos/base.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Cpnucleo.RazorPages.Protos.TipoTarefaProto";

package tipoTarefa;

service TipoTarefaProto {

	rpc Incluir (TipoTarefaModel) returns (TipoTarefaModel);
	rpc Listar (google.protobuf.Empty) returns (ListarReply);
	rpc Consultar (base.BaseRequest) returns (TipoTarefaModel);
	rpc Alterar (TipoTarefaModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
}

message TipoTarefaModel {

	string Id = 1;
	string Nome = 2;
	google.protobuf.StringValue Element = 3;
	string Image = 4;
	string DataInclusao = 5;
}

message ListarReply {

    repeated TipoTarefaModel Lista = 1;
}